animacion en servicios

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
 <!--icono marca-->
     <link rel="shortcut icon" href="../assets/icons/Brisas_Design.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Brisasbnb-servicios</title>
 </head>
 
@@ -36,7 +37,7 @@
         <div class="container-mainServicios">
             <h2 class="titulo-paginas">Servicios a propietarios</h2>  
             
-            <section class="contenedorlista1">
+            <section class="contenedorlista1" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" >
                 <img class="contenedorlista__img" src="../assets/img/christiann-koepke-dQyS2pMYtok-unsplash Check in.jpg" alt="gestion" width="250">
                 <article class="contenedorlista__item">
                     <div>Gestión integral de alojamientos</div>
@@ -88,6 +89,9 @@
         </div>
     </footer> 
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
