--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
 <!--icono marca-->
     <link rel="shortcut icon" href="../assets/icons/Brisas_Design.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Brisasbnb-contacto</title>
 </head>
 <body>
@@ -32,7 +33,7 @@
     </div>
     <main class="container-mainContacto">
         <h2 class="titulo-paginas">Contacto</h2>
-        <form class="box-contacto" action="procesar.php" name="contacto" method="post">
+        <form class="box-contacto" action="procesar.php" name="contacto" method="post" data-aos="fade-up-left"data-aos-duration="1000">
             <fieldset class="contenedor-fieldsetContacto">
                 <legend>Reservas - Consultas - Sugerencias</legend>
                 <p class="nombreApellido">
@@ -109,6 +110,10 @@
         </div>
     </footer> 
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     
 </body>
 </html>
