--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,34 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilos.css">
-<!--icono marca-->
     <link rel="shortcut icon" href="../assets/icons/Brisas_Design.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> 
+    <link rel="stylesheet" href="../libs/bootstrap-5.2.0-dist/bootstrap-5.2.0-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <title>Brisasbnb-contacto</title>
 </head>
 <body>
     <div class="navheaderback">
-        <nav>
-            <a href="../index.html">
-            <img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200">
-            </a>
-            <ul class="ulnav">
-            <!--Enlaces relativos-->
-            <li class="linav"> <a class="linav-a" href="../index.html">Inicio</a></li>
-            <li class="linav"> <a class="linav-a" href="servicios.html">Servicios</a></li>
-            <li class="linav"> <a class="linav-a" href="pisos.html">Pisos</a></li>
-            <li class="linav"> <a class="linav-a" href="livecams.html">Livecams</a></li>
-            <li class="linav"> <a class="linav-a" href="#">Contacto</a></li>
-        </ul>
-    </nav>
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pisos.html">Pisos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="livecams.html">Livecams</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
     <header class="contenedorHeader">
         <h1 class="contenedorHeader__titulo">Madrid - Buenos Aires</h1>
             <h2 class="contenedorHeader__subtitulo">Alojamientos turísticos</h2>
     </header>
     </div>
-    <main class="container-mainContacto">
+    <main class="contenedor-mainContacto">
         <h2 class="titulo-paginas">Contacto</h2>
         <form class="box-contacto" action="procesar.php" name="contacto" method="post" data-aos="fade-up-left"data-aos-duration="1000">
             <fieldset class="contenedor-fieldsetContacto">
@@ -103,9 +121,9 @@
         <div class="footer-logo"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></div>
         <div class="footer-header"><h4>Síguenos</h4>
         <ul class="footer-iconos">
-            <li><img src="../assets/icons/1217163_twitter_icon.png" alt="twitter" width="25px"></li>
-            <li><img src="../assets/icons/1217174_instagram_icon.png" alt="instagram" width="25px"></li>
-            <li><img src="../assets/icons/1217173_linkedin_icon.png" alt="linkedin" width="25px"></li>
+            <li><i class="bi bi-instagram"></i></li>
+            <li><i class="bi bi-twitter"></i></li>
+            <li><i class="bi bi-linkedin"></i></li>
         </ul>
         </div>
     </footer> 
@@ -114,6 +132,7 @@
     <script>
         AOS.init();
     </script>
-    
+    <script src="../libs/bootstrap-5.2.0-dist/bootstrap-5.2.0-dist/js/bootstrap.bundle.js"></script>
+
 </body>
 </html>
