--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,28 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilos.css">
-<!--icono marca-->
     <link rel="shortcut icon" href="../assets/icons/Brisas_Design.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <title>Brisasbnb-servicios</title>
 </head>
 
 
 <body>
     <div class="navheaderback">
-        <nav>
-            <a href="../index.html">
-            <img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200">
-            </a>
-            <ul class="ulnav">
-                <!--Enlaces relativos-->
-                <li class="linav"> <a class="linav-a" href="../index.html">Inicio</a></li>
-                <li class="linav"> <a class="linav-a" href="#">Servicios</a></li>
-                <li class="linav"> <a class="linav-a" href="pisos.html">Pisos</a></li>
-                <li class="linav"> <a class="linav-a" href="livecams.html">Livecams</a></li>
-                <li class="linav"> <a class="linav-a" href="contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pisos.html">Pisos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="livecams.html">Livecams</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     
         <header class="contenedorHeader">
@@ -34,7 +52,7 @@
         </header>
     </div>
     <main>   
-        <div class="container-mainServicios">
+        <div class="contenedor-mainServicios">
             <h2 class="titulo-paginas">Servicios a propietarios</h2>  
             
             <section class="contenedorlista1" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" >
@@ -82,9 +100,9 @@
         <div class="footer-logo"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></div>
         <div class="footer-header"><h4>Síguenos</h4>
         <ul class="footer-iconos">
-            <li><img src="../assets/icons/1217163_twitter_icon.png" alt="twitter" width="25px"></li>
-            <li><img src="../assets/icons/1217174_instagram_icon.png" alt="instagram" width="25px"></li>
-            <li><img src="../assets/icons/1217173_linkedin_icon.png" alt="linkedin" width="25px"></li>
+            <li><i class="bi bi-instagram"></i></li>
+            <li><i class="bi bi-twitter"></i></li>
+            <li><i class="bi bi-linkedin"></i></li>
         </ul>
         </div>
     </footer> 
@@ -93,5 +111,8 @@
     <script>
         AOS.init();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+
 </body>
 </html>
