Bootstrap aplicado a todo el sitio

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../assets/icons/Brisas_Design.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> 
-    <link rel="stylesheet" href="../libs/bootstrap-5.2.0-dist/bootstrap-5.2.0-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../libs/bootstrap/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,31 +16,21 @@
 </head>
 <body>
     <div class="navheaderback">
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pisos.html">Pisos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="livecams.html">Livecams</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Contacto</a>
-                    </li>
-                    </ul>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="servicios.html">Servicios</a>
+                    <a class="nav-link" href="pisos.html">Pisos</a>
+                    <a class="nav-link" href="livecams.html">Livecams</a>
+                    <a class="nav-link active" aria-current="page" href="#">Contacto</a>
                 </div>
+            </div>
             </div>
         </nav>
 
@@ -132,7 +122,7 @@
     <script>
         AOS.init();
     </script>
-    <script src="../libs/bootstrap-5.2.0-dist/bootstrap-5.2.0-dist/js/bootstrap.bundle.js"></script>
+    <script src="../libs/bootstrap/bootstrap/js/bootstrap.bundle.js"></script>
 
 </body>
 </html>
