--- a/index.html
+++ b/index.html
@@ -6,44 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/icons/Brisas_Design.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">      -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> 
-    <link rel="stylesheet" href="libs/bootstrap-5.2.0-dist/bootstrap-5.2.0-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/bootstrap/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <title>Brisasbnb-Home</title>
+
 </head>
 
 
 <body>
     <div class="navheaderback">
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/pisos.html">Pisos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/livecams.html">Livecams</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
-                    </li>
-                    </ul>
+            <a class="navbar-brand" href="index.html"><img src="assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                    <a class="nav-link" href="pages/pisos.html">Pisos</a>
+                    <a class="nav-link" href="pages/livecams.html">Livecams</a>
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
                 </div>
+            </div>
             </div>
         </nav>
 
@@ -118,7 +108,6 @@
                         <li>1 cama</li>
                         <li>1 baño</li>
                     </ul>
-
                     <button class="boton-img"><a href="pages/contacto.html">Reservar</a></button>
                 </article>
                 
@@ -248,9 +237,7 @@
     <script>
         AOS.init();
     </script>
-    <script src="libs/bootstrap-5.2.0-dist/bootstrap-5.2.0-dist/js/bootstrap.bundle.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-    -->
+    <script src="libs/bootstrap/bootstrap/js/bootstrap.bundle.js"></script>
+
 </body>
 </html>
