Correciones y estilos a img y btns

--- a/pages/pisos.html
+++ b/pages/pisos.html
@@ -47,19 +47,34 @@
             <h2 class="titulo-paginas">Pisos en venta</h2> 
             <section class="flex-pisosventa" data-aos="fade-up" data-aos-duration="3000">
                 <article class="cajadeptos">
-                    <img src="../assets/img/Venta1.jpg" alt="venta1" width="250">
+                    <div class="contenedor-hoverdeptos">
+                        <img class="hoverdeptos_img"  src="../assets/img/Venta1.jpg" alt="venta1" width="250">
+                        <div class="contenedor-hoverdeptos__overlay">
+                            <div class="contenedor-hoverdeptos__texto">USD 230.000</div>
+                        </div>
+                    </div>
                     <p class="font-destacados">Tres ambientes en Palermo</p>
                     <p class="font-destacados__detalle">Amoblado para estancias largas</p>
                     <button class="boton-img"><a class="boton-img-a" href="./contacto.html">Me interesa</a></button>
                 </article>
                 <article class="cajadeptos">
-                    <img src="../assets/img/Venta2.jpg" alt="venta2" width="250">
+                    <div class="contenedor-hoverdeptos" >
+                        <img class="hoverdeptos_img" src="../assets/img/Venta2.jpg" alt="venta2" width="250">
+                        <div class="contenedor-hoverdeptos__overlay">
+                            <div class="contenedor-hoverdeptos__texto">USD 190.000</div>
+                        </div>
+                </div>
                     <p class="font-destacados">Dos ambientes en Belgrano</p>
                     <p class="font-destacados__detalle">Ideal renta alquiler temporario</p>
                     <button class="boton-img"><a href="./contacto.html">Me interesa</a></button>
                 </article>
                 <article class="cajadeptos">
-                    <img src="../assets/img/Venta3.jpg"alt="venta3" width="250">
+                    <div class="contenedor-hoverdeptos">
+                    <img class="hoverdeptos_img"src="../assets/img/Venta3.jpg"alt="venta3" width="250">
+                        <div class="contenedor-hoverdeptos__overlay">
+                            <div class="contenedor-hoverdeptos__texto">EUR 190.000</div>
+                        </div>
+                    </div>
                     <p class="font-destacados">Estudio luminoso en Goya</p>
                     <p class="font-destacados__detalle">Actualmente con renta</p>
                     <button class="boton-img"><a href="./contacto.html">Me interesa</a></button>
