maps seo y full responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ponte en contacto directo con los dueños de los alojamientos vacacionales.">
+    <meta name="keywords" content="VACACIONES, HOSPEDAJE, ALOJAMIENTO, ALOJAMIENTO VACACIONAL, ALOJAMIENTOS VACACIONALES, ALQUILER VACACIONAL, APARTAMENTOS VACACIONALES, ALOJAMIENTOS TURISTICOS, APARTAMENTOS TURISTICOS, PISOS ALQUILER, APARTAMENTOS EN ALQUILER, CASAS EN ALQUILER, MADRID, BUENOS AIRES, AIRBNB">
     <link rel="shortcut icon" href="../assets/icons/Brisas_Design.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> 
@@ -36,7 +38,7 @@
 
     <header class="contenedorHeader">
         <h1 class="contenedorHeader__titulo">Madrid - Buenos Aires</h1>
-            <h2 class="contenedorHeader__subtitulo">Alojamientos turísticos</h2>
+            <h2 class="contenedorHeader__subtitulo">Alojamientos vacacionales</h2>
     </header>
     </div>
     <main class="contenedor-mainContacto">
@@ -45,7 +47,7 @@
             <fieldset class="contenedor-fieldsetContacto">
                 <legend>Reservas - Consultas - Sugerencias</legend>
                 <p class="nombreApellido">
-                    <label>Nombre:
+                    <label class="labelname">Nombre:
                     <input type="text" name="nombre" placeholder="Julian" required>
                     </label>
                     <label>Apellido:
@@ -53,7 +55,7 @@
                     </label>
                 </p>
                 <p class="movilEmail"">
-                    <label>Móvil
+                    <label class="labelname">Móvil
                     <input type="text" name="number" placeholder="+3499456358">
                     </label>
                     </label>
@@ -108,7 +110,9 @@
 
 
     <footer>
-        <div class="footer-logo"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></div>
+        <div class="footer-logo"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200">
+            <div><span>Airbnb</span><span class="superhost"> superhost</span></div>
+        </div>
         <div class="footer-header"><h4>Síguenos</h4>
         <ul class="footer-iconos">
             <li><i class="bi bi-instagram"></i></li>
