--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Alojamientos vacacionales sin intermediarios. Dueño directo. Al mejor precio. En Madrid y Buenos Aires.">
+    <meta name="keywords" content="VACACIONES, HOSPEDAJE, ALOJAMIENTO, ALOJAMIENTO VACACIONAL, ALOJAMIENTOS VACACIONALES, ALQUILER VACACIONAL, APARTAMENTOS VACACIONALES, ALOJAMIENTOS TURISTICOS, APARTAMENTOS TURISTICOS, PISOS ALQUILER, APARTAMENTOS EN ALQUILER, CASAS EN ALQUILER, MADRID, BUENOS AIRES, AIRBNB">
     <link rel="shortcut icon" href="assets/icons/Brisas_Design.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> 
@@ -40,7 +42,7 @@
         <header>
             <div class="contenedorHeader">
                 <h1 class="contenedorHeader__titulo" data-aos="fade-down">Madrid - Buenos Aires</h1>
-                <h2 class="contenedorHeader__subtitulo" data-aos="fade-up">Alojamientos turísticos</h2>
+                <h2 class="contenedorHeader__subtitulo" data-aos="fade-up">Alojamientos vacacionales</h2>
             </div>
         </header>
     </div>
@@ -57,11 +59,11 @@
                         </select>
                     </div>
                     <div class="col-md">
-                        <input type="text"class="form-control" placeholder="Desde">
+                        <input type="text"class="form-control" placeholder="Desde" onfocus="(this.type='date')">
                     </div>
                     
                     <div class="col-md">
-                        <input type="text" class="form-control" placeholder="Hasta">
+                        <input type="text" class="form-control" placeholder="Hasta" onfocus="(this.type='date')">
                     </div>
                     <div class= "col-md">
                         <select class="form-select">
@@ -91,7 +93,7 @@
                             <img src="assets/img/Brisas 1.webp" alt="brisas1" width="250">
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/MapaSPM.png" alt="mapaSPM">
+                            <img src="assets/img/MapaSPM.jpg" alt="mapaSPM">
                         </div>
                     </div>
                     <p class="font-destacados" >Brisas 1</p>
@@ -111,7 +113,7 @@
                             <img src="assets/img/Brisas 2.webp" alt="brisas2" width="250">
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/MapaSPM.png" alt="mapaSPM">
+                            <img src="assets/img/MapaSPM.jpg" alt="mapaSPM">
                         </div>
                     </div>
                     <p class="font-destacados" >Brisas 2</p>
@@ -131,7 +133,7 @@
                             <img src="assets/img/Pride.webp" alt="pride" width="250">
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/MapaPelayo.png" alt="mapaPelayo">
+                            <img src="assets/img/MapaPelayo.jpg" alt="mapaPelayo">
                         </div>
                     </div>
                     <p class="font-destacados" >Pride</p>
@@ -151,7 +153,7 @@
                     <div><img src="assets/img/Tablao.webp" alt="tablao" width="250"></div>
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/MapaAG4.png" alt="mapaAg4">
+                            <img src="assets/img/MapaAG4.jpg" alt="mapaAg4">
                         </div>
                     </div>
                     <p class="font-destacados" >Tablao</p>
@@ -171,7 +173,7 @@
                     <div><img src="assets/img/City.webp" alt="city" width="250"></div>
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/MapaAG4.png" alt="mapaAg4">
+                            <img src="assets/img/MapaAG4.jpg" alt="mapaAg4">
                         </div>
                     </div>
                     <p class="font-destacados" >City</p>
@@ -191,7 +193,7 @@
                     <div><img src="assets/img/Garden.webp" alt="garden" width="250"></div>
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/MapaAG4.png" alt="mapaAg4">
+                            <img src="assets/img/MapaAG4.jpg" alt="mapaAg4">
                         </div>
                     </div>
                     <p class="font-destacados" >Garden</p>
@@ -214,7 +216,7 @@
                     <div><img src="assets/img/Serrano.webp" alt="serrano" width="250"></div>
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/mapaSerrano.png" alt="mapaSerrano">
+                            <img src="assets/img/mapaSerrano.jpg" alt="mapaSerrano">
                         </div>
                     </div>
                     <p class="font-destacados" >Serrano</p>
@@ -234,7 +236,7 @@
                     <div><img src="assets/img/Beruti.webp" alt="beruti" width="250"></div>
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/Mapaberuti.png" alt="mapaBeruti">
+                            <img src="assets/img/Mapaberuti.jpg" alt="mapaBeruti">
                         </div>
                     </div>
                     <p class="font-destacados" >Beruti</p>
@@ -254,7 +256,7 @@
                     <div><img src="assets/img/Bellini.webp"alt="bellini" width="250"></div>
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/mapaBellini.png" alt="mapaBellini">
+                            <img src="assets/img/mapaBellini.jpg" alt="mapaBellini">
                         </div>
                     </div>
                     <p class="font-destacados" >Bellini</p>
@@ -274,7 +276,7 @@
                     <div><img src="assets/img/San Telmo.webp"alt="santelmo" width="250"></div>
                         </div>
                         <div class="dorso">
-                            <img src="assets/img/mapaST.png" alt="mapaSantelmo">
+                            <img src="assets/img/mapaST.jpg" alt="mapaSantelmo">
                         </div>
                     </div>
                     <p class="font-destacados" >San Telmo</p>
@@ -293,7 +295,9 @@
 
 
     <footer>
-        <div class="footer-logo"><img src="assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></div>
+        <div class="footer-logo"><img src="assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200">
+            <div><span>Airbnb</span><span class="superhost"> superhost</span></div>
+        </div>
         <div class="footer-header"><h4>Síguenos</h4>
         <ul class="footer-iconos">
             <li><i class="bi bi-instagram"></i></li>
