Correcciones links, agregados sass y pagina en construccion

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,7 +43,7 @@
     </div>
     <main class="contenedor-mainContacto">
         <h2 class="titulo-paginas">Contacto</h2>
-        <form class="box-contacto" action="procesar.php" name="contacto" method="post" data-aos="fade-up-left"data-aos-duration="1000">
+        <form class="box-contacto" action="https://formsubmit.co/f7e81877109b80713ebd3245d83fc3f0" name="contacto" method="post" data-aos="fade-up-left"data-aos-duration="1000">
             <fieldset class="contenedor-fieldsetContacto">
                 <legend>Reservas - Consultas - Sugerencias</legend>
                 <p class="nombreApellido">
@@ -92,11 +92,11 @@
 
                 <div class="contenedorCheckbox">
                     <p class="checkbox">
-                        <input type="checkbox">
+                        <input type="checkbox" required>
                         <label for="avisolegal">He leído y acepto el Aviso Legal</label>
                     </p>
                     <p class="checkbox">
-                        <input type="checkbox">
+                        <input type="checkbox" required>
                         <label for="politica-privacidad">He leído y acepto la Política de Privacidad</label>
                     </p>
                 </div>       
@@ -115,9 +115,9 @@
         </div>
         <div class="footer-header"><h4>Síguenos</h4>
         <ul class="footer-iconos">
-            <li><i class="bi bi-instagram"></i></li>
-            <li><i class="bi bi-twitter"></i></li>
-            <li><i class="bi bi-linkedin"></i></li>
+            <li><a href="soon.html"><i class="bi bi-instagram"></i></a></li>
+            <li><a href="soon.html"><i class="bi bi-twitter"></i></a></li>
+            <li><a href="soon.html"><i class="bi bi-linkedin"></i></a></li>
         </ul>
         </div>
     </footer> 
