--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -98,9 +98,9 @@
         </div>
         <div class="footer-header"><h4>Síguenos</h4>
         <ul class="footer-iconos">
-            <li><i class="bi bi-instagram"></i></li>
-            <li><i class="bi bi-twitter"></i></li>
-            <li><i class="bi bi-linkedin"></i></li>
+            <li><a href="soon.html"><i class="bi bi-instagram"></i></a></li>
+            <li><a href="soon.html"><i class="bi bi-twitter"></i></a></li>
+            <li><a href="soon.html"><i class="bi bi-linkedin"></i></a></li>
         </ul>
         </div>
     </footer> 
