--- a/pages/soon.html
+++ b/pages/soon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conoce tu destino antes de llegar. Livecams en Madrid y Buenos Aires.">
+    <meta name="description" content="Ponte en contacto directo con los dueños de los alojamientos vacacionales.">
     <meta name="keywords" content="VACACIONES, HOSPEDAJE, ALOJAMIENTO, ALOJAMIENTO VACACIONAL, ALOJAMIENTOS VACACIONALES, ALQUILER VACACIONAL, APARTAMENTOS VACACIONALES, ALOJAMIENTOS TURISTICOS, APARTAMENTOS TURISTICOS, PISOS ALQUILER, APARTAMENTOS EN ALQUILER, CASAS EN ALQUILER, MADRID, BUENOS AIRES, AIRBNB">
     <link rel="shortcut icon" href="../assets/icons/Brisas_Design.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -14,10 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-    <title>Brisasbnb-livecams</title>
+    <title>Brisasbnb-contacto</title>
 </head>
 <body>
-    <div class="navheaderback">
+    <div class="navheaderbackSoon">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Brisas_Design.png" alt="logo-brisasbnb" width="200"></a>
@@ -29,43 +29,26 @@
                     <a class="nav-link" href="../index.html">Inicio</a>
                     <a class="nav-link" href="servicios.html">Servicios</a>
                     <a class="nav-link" href="pisos.html">Pisos</a>
-                    <a class="nav-link active" aria-current="page" href="#">Livecams</a>
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="livecams.html">Livecams</a>
+                    <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                 </div>
             </div>
             </div>
         </nav>
 
-    <header class="contenedorHeader">
-        <h1 class="contenedorHeader__titulo">Madrid - Buenos Aires</h1>
-            <h2 class="contenedorHeader__subtitulo">Alojamientos vacacionales</h2>
+    <header class="contenedorHeaderSoon" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+        <h1 class="contenedorHeaderSoon__titulo">PÁGINA EN CONSTRUCCIÓN</h1>
+            <h2 class="contenedorHeaderSoon__subtitulo">Estamos trabajando en nuestro contenido</h2>
     </header>
     </div>
+    <main class="contenedor-mainContacto">
+        <button class="contactserv">
+            <span></span>
+            <span></span>
+            <a href="./contacto.html">Contacto</a>
+        </button> 
 
-    <main class="contenedor-mainLive">
-        <h2 class="titulo-paginas">Live cams</h2>
-        <h3 id="bajadaLive" data-aos="fade-up">Comienza a conocer la ciudad antes de tu llegada!</h3>
-        <div class="grid-contenedoresLive">
-            <section class="contenedorLive grid-madrid">
-                <h4 class="contenedorLive__titulo">Madrid</h4>
-                <iframe class="contenedorLive__iframe" src="https://www.youtube.com/embed/ljaxM-sq3kY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </section>
-
-            <section class="contenedorLive grid-baires">
-                <h4 class="contenedorLive__titulo">Buenos Aires</h4>
-                <iframe class="contenedorLive__iframe" src="https://www.youtube.com/embed/if91GyWP3zQ?controls=0" title="YouTube video player Buenos Aires" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
-            </section>
-
-            <section class="grid-bannerHoriz">
-                <img src="../assets/img/bannerHoriz.png"alt="bannerHoriz">
-            </section>
-
-            <section class="grid-bannerVertical">
-                <img src="../assets/img/bannerVertical.png"alt="bannerVertical" width="250">
-            </section>
-        </div>
     </main>
-
 
 
     <footer>
@@ -74,9 +57,9 @@
         </div>
         <div class="footer-header"><h4>Síguenos</h4>
         <ul class="footer-iconos">
-            <li><a href="soon.html"><i class="bi bi-instagram"></i></a></li>
-            <li><a href="soon.html"><i class="bi bi-twitter"></i></a></li>
-            <li><a href="soon.html"><i class="bi bi-linkedin"></i></a></li>
+            <li><i class="bi bi-instagram"></i></li>
+            <li><i class="bi bi-twitter"></i></li>
+            <li><i class="bi bi-linkedin"></i></li>
         </ul>
         </div>
     </footer> 
@@ -86,6 +69,6 @@
         AOS.init();
     </script>
     <script src="../libs/bootstrap/bootstrap/js/bootstrap.bundle.js"></script>
-    
+
 </body>
 </html>
