--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="form-text">Mayores de tres años</div>
                     </div>
                     <div class="col-md">
-                        <button type="submit" class="btn btn-primary">BUSCAR</button>
+                        <button type="submit" class="btn btn-primary"><a href="./pages/soon.html">BUSCAR</a></button>
                     </div>
                 </form>
             </div>
@@ -300,9 +300,9 @@
         </div>
         <div class="footer-header"><h4>Síguenos</h4>
         <ul class="footer-iconos">
-            <li><i class="bi bi-instagram"></i></li>
-            <li><i class="bi bi-twitter"></i></li>
-            <li><i class="bi bi-linkedin"></i></li>
+            <li><a href="./pages/soon.html"><i class="bi bi-instagram"></i></a></li>
+            <li><a href="./pages/soon.html"><i class="bi bi-twitter"></i></a></li>
+            <li><a href="./pages/soon.html"><i class="bi bi-linkedin"></i></a></li>
         </ul>
         </div>
     </footer> 
